# CECE

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  AGENTS.md  CMakeLists.txt  Doxyfile  LARGE_GRID_PRODUCTION_GUIDE.md  README.md  aces_config.yaml  aces_config.yaml.example  aces_data_streams.rc  aces_data_streams.yaml  aces_robust_run.sh  build_and_run.sh  check_output.py  cppcheck_output.txt  docker_build_and_test.sh  hemco_mimic_config.yaml  index.html  new_scheme_config.yaml.example  pyproject.toml  rebuild_and_test.sh  run_only.sh  search.json  setup.sh  test.sh  test_bindings_simple.py  test_checkpoint.py  test_driver_config.yaml  zensical.toml
api/: index.html
ccpp_host_metadata/: index.html
cdeps_parser/: index.html
cmake/: ACESConfig.cmake.in  FindCDEPS.cmake  FindESMF.cmake  FindPIO.cmake
concepts/: index.html
configuration/: index.html
developer_guide/: index.html
dms/: index.html
docs/: api.md  ccpp_host_metadata.md  cdeps_parser.md  concepts.md  configuration.md  developer_guide.md  dms.md  driver_configuration.md  driver_configuration_guide.md  dust.md  examples.md  fengsha.md  ginoux.md  hemco_migration.md  index.md  k14.md  kokkos_configuration.md  lightning_nox.md  megan.md  mesh_file_input.md  migration_examples.md  performance_benchmarks.md  physics_scheme_development.md  python_bindings.md  scripts.md  sea_salt.md  soil_nox.md  stacking_engine.md  tutorial.md  users-guide.md  vertical_distribution.md  volcano.md
driver_configuration/: index.html
driver_configuration_guide/: index.html
dust/: index.html
examples/: README.md  aces_config_advanced.yaml  aces_config_co_only.yaml  aces_config_co_only_test.yaml  aces_config_ex1.yaml  aces_config_ex1_360x720.yaml  aces_config_ex2.yaml  aces_config_ex3.yaml  aces_config_ex4.yaml  aces_config_ex5.yaml  aces_config_ex6.yaml  aces_config_nox_only_test.yaml  aces_config_nox_test.yaml  aces_config_nox_time_test.yaml  aces_data_streams.yaml  aces_driver_ex4.cfg  aces_driver_ex6.cfg  cdeps_streams_ex1.txt  cdeps_streams_ex2.txt  cdeps_streams_ex3.txt  cdeps_streams_ex4.txt  cdeps_streams_ex5.txt  cdeps_streams_ex6.txt  cdeps_streams_example.txt  cece_config_advanced.yaml  cece_config_ex1.yaml  cece_config_ex2.yaml  cece_config_ex3.yaml  cece_config_ex4.yaml  cece_config_ex5.yaml  cece_config_ex6.yaml  cece_config_megan3.yaml  cece_driver_ex1.cfg  cece_driver_ex2.cfg  cece_driver_ex3.cfg  cece_driver_ex4.cfg  cece_driver_ex6.cfg  index.html  test_cf_aware.yaml  test_co_output.yaml  (+2 more)
fengsha/: index.html
ginoux/: index.html
hemco_migration/: index.html
k14/: index.html
kokkos_configuration/: index.html
lightning_nox/: index.html
megan/: index.html
mesh_file_input/: index.html
migration_examples/: index.html
modulefiles/: cece_acorn.intel.lua  cece_common.lua  cece_container.intel.lua  cece_derecho.gnu.lua  cece_derecho.intel.lua  cece_gaeac5.intel.lua  cece_gaeac5.intelllvm.lua  cece_gaeac6.intel.lua  cece_gaeac6.intelllvm.lua  cece_hera.gnu.lua  cece_hera.intel.lua  cece_hera.intelllvm.lua  cece_hercules.gnu.lua  cece_hercules.intel.lua  cece_hercules.intelllvm.lua  cece_linux.gnu  cece_linux.intel  cece_macosx.gnu  cece_macosx.intel  cece_noaacloud.intel.lua  cece_orion.intel.lua  cece_orion.intelllvm.lua  cece_ursa.gnu.lua  cece_ursa.intel.lua  cece_ursa.intelllvm.lua  cece_wcoss2.intel.lua
performance_benchmarks/: index.html
physics_scheme_development/: index.html
python_bindings/: index.html
scripts/: MACCity_4x5.nc  benchmark_hemco_vs_aces.py  benchmark_hemco_vs_cece.py  benchmark_optimization.py  download_hemco_data.py  fix_docker_and_setup.sh  generate_physics_scheme.py  hemco_to_aces.py  hemco_to_cece.py  index.html  integrate_cece_scm.py  run_idempotence_test.sh  setup_hemco_examples.sh  verify_hemco_data.py  visualize_optimized_stack.py  visualize_stack.py
sea_salt/: index.html
soil_nox/: index.html
src/: aces_c_api.cpp  aces_cap.F90  aces_cap.cpp  aces_compute.cpp  aces_config_parser.cpp  aces_config_path.cpp  aces_config_validator.cpp  aces_core_advertise.cpp  aces_core_driver_config.cpp  aces_core_field_helpers.cpp  aces_core_finalize.cpp  aces_core_fortran_bridge.cpp  aces_core_initialize_p1.cpp  (+32 more)
src/io/tide/: CMakeLists.txt  README.md  README_TUTORIAL.md  TIDE_DESIGN.md  container_id.txt  fix_docker.sh
src/io/tide/.github/workflows/: ci.yml
src/io/tide/cmake/: FindESMF.cmake  FindPIO.cmake  LibCheck.cmake  LibFind.cmake
src/io/tide/dshr/: CMakeLists.txt  dshr_mod.F90
src/io/tide/share/: CMakeLists.txt  nuopc_shr_methods.F90  shr_assert.h  shr_cal_mod.F90  shr_file_mod.F90  shr_string_mod.F90
src/io/tide/streams/: CMakeLists.txt  dshr_methods_mod.F90  dshr_strdata_mod.F90  dshr_stream_mod.F90  dshr_tinterp_mod.F90
src/io/tide/tide/src/: tide_cf_detection_mod.F90  tide_mod.F90  tide_yaml_c.cpp  tide_yaml_mod.F90
src/io/tide/tide/tests/: input_data.cdl  test_cf_property_10_mode_control.F90  test_cf_property_11_coord_detect.F90  test_cf_property_12_monotonicity.F90  test_cf_property_13_multidim.F90  test_cf_property_14_vertical_dim.F90  test_cf_property_15_dim_reorder.F90  test_cf_property_16_caching.F90  test_cf_property_17_cache_invalidation.F90  test_cf_property_18_success_log.F90  test_cf_property_19_failure_log.F90  test_cf_property_1_complete_metadata.F90  test_cf_property_20_fieldmap_log.F90  test_cf_property_21_compliance.F90  test_cf_property_22_noncf_fallback.F90  test_cf_property_2_missing_attrs.F90  test_cf_property_3_stdname_match.F90  test_cf_property_4_field_map.F90  test_cf_property_5_string_match.F90  test_cf_property_6_unit_comparison.F90  test_cf_property_7_fallback.F90  test_cf_property_8_explicit_priority.F90  test_cf_property_9_backward_compat.F90  test_config.yaml  test_tide.F90  test_tide_roundtrip.F90
src/python/: CMakeLists.txt  __init__.py  _bindings.py  aces_c_bindings.cpp  aces_pybind.cpp  cece_pybind.cpp  config.py  exceptions.py  state.py  utils.py
standalone_nuopc/: CMakeLists.txt  driver.F90  main.F90  main.cpp  mainApp.F90  mainApp_old.F90  single_driver.F90
(+356 files in other folders)
